# hablara

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .lycheeignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  hablara.desktop  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/: NAME_CHANGE_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: app-store.yml  ci.yml.disabled  links-check.yml  linux-build.yml  release.yml  ubuntu-build.yml  windows-build.yml  windows-build.yml.disabled  windows-store-build.yml
docs/: README.md  THIRD_PARTY_LICENSES.md
docs/guides/: FAQ.md  LINUX_TROUBLESHOOTING.md  RECORDING_QUALITY.md  STORAGE.md
docs/legal/: PRIVACY.md  SUPPORT.md  (+1 more)
icons/: 00_START_HERE.md  README.md  generate-sizes.sh  icon.icns
public/: embeddings.json
scripts/: README.md  benchmark-stemmer-comparison.mjs  benchmark-stemmer.mjs  build-knowledge-db.ts  bump-version.ps1  bump-version.sh  cleanup-deprecated.sh  clear-icon-cache.sh  compare-stem-quality.mjs  debug-sound-settings.js  dev.sh  download-embedding-model.ts  download-professional-sounds.sh  evaluate-stem-quality.mjs  generate-embeddings.ts  generate-sounds.sh  generate-test-fixtures.ts  install-hotkey-agent.sh  mlx_analyze.py  mlx_server_dev.py  mlx_transcribe.py  next-dev-wait.sh  quantize-onnx-model.py  setup-ollama-linux.sh  setup-ollama-mac.sh  setup-ollama-quick.ps1  setup-ollama-quick.sh  setup-ollama-win.ps1  setup-whisper-linux.sh  setup-whisper.ps1  setup-whisper.sh  test-hotkey-change.sh  test-rag-recall.mjs  uninstall-hotkey-agent.sh  validate-doc-refs.sh  validate-explanation-refs.sh  validate-quantized-model.py
src-tauri/: Cargo.toml  Info.plist  child-entitlements.plist  embedded-entitlements.plist  entitlements-direct.plist  entitlements.plist  tauri.conf.json  tauri.microsoftstore.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: README.md  default.json  linux.json  windows.json
src-tauri/src/: audio.rs  emotion.rs  lib.rs  main.rs  storage.rs  text.rs
src-tauri/src/audio_analysis/: emotion_classifier.rs  mod.rs  prosodic.rs  spectral.rs  tone.rs
src-tauri/src/commands/: analysis.rs  audio_legacy.rs  audio_native.rs  export.rs  file_io.rs  hotkey_agent.rs  keyring.rs  mlx_llm.rs  mod.rs  storage.rs  system.rs  window.rs
src-tauri/src/commands/transcription/: mlx_whisper.rs  mod.rs  whisper_cpp.rs
src-tauri/src/commands/utils/: audio.rs  encoding.rs  mod.rs  parsing.rs  path.rs
src-tauri/src/native_audio/: constants.rs  device.rs  mod.rs  recorder.rs  resampler.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/linux/: mod.rs
src-tauri/src/platform/macos/: mod.rs
src-tauri/src/platform/windows/: mod.rs
src-tauri/src/security/: mod.rs  path_validation.rs  tests.rs
src-tauri/src/types/: mod.rs  psychological.rs
src-tauri/src/vad/: mod.rs  pipeline.rs  silero.rs  smoothed.rs
src-tauri/tests/: emotion_integration.rs  security_audit_verification.rs  spawn_blocking_integration.rs
(+319 files in other folders)
