# Rust/Cargo Configuration
# Guidelines: docs/reference/guidelines/CONFIG.md#cargotoml

[package]
name = "hablara"
version = "1.1.1"
description = "Hablará - Desktop voice recording with AI-powered transcription and psychological enrichment"
authors = ["Marc Allgeier"]
license = "MIT"
edition = "2021"

[lib]
name = "hablara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native"] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
base64 = "0.22"
hound = "3.5"  # WAV file handling
rubato = "0.16"  # Audio resampling (from handy repo)
cpal = "0.15"    # Native audio capture (from handy repo)
regex = "1"  # Text filtering for hallucination removal
once_cell = "1"  # Lazy static regex patterns
tracing = "0.1"  # Structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }  # Log output
chrono = { version = "0.4", features = ["serde"] }  # Date/time for recording metadata
uuid = { version = "1", features = ["v4", "serde"] }  # Unique IDs for recordings
dirs = "5.0"  # Home directory detection for security validation
tauri-plugin-fs = "^2.0"
tauri-plugin-opener = "2.0.0"
tauri-plugin-http = "2"  # HTTP client for Anthropic API (bypasses CORS)
open = "5"  # Open URLs in default browser (for Help menu)

# VAD with load-dynamic feature to avoid MSVC linking issues on Windows
[target.'cfg(target_os = "windows")'.dependencies.vad-rs]
git = "https://github.com/cjpais/vad-rs"
default-features = false
features = ["load-dynamic"]

[target.'cfg(not(target_os = "windows"))'.dependencies.vad-rs]
git = "https://github.com/cjpais/vad-rs"
default-features = false

[dev-dependencies]
futures = "0.3"  # For join_all in integration tests
tempfile = "3.24.0"

# macOS-specific Dependencies
[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-macos-permissions = "2.3"

# Windows-specific Dependencies (Phase B/E)
[target.'cfg(target_os = "windows")'.dependencies]
# Planned additions for Phase B:
# - windows-sys (Windows API bindings for WASAPI tuning)
# Phase E:
# - DirectML bindings for GPU acceleration

# Linux-specific Dependencies
[target.'cfg(target_os = "linux")'.dependencies]
# No additional crates needed - using std::env for XDG paths
# Future: dbus for desktop notifications, pipewire bindings

[profile.dev]
incremental = true

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1
panic = "abort"

[features]
# Mac App Store build: sandboxed, menu bar only (no global hotkeys)
app-store = []
# Microsoft Store build: MSI with offline WebView2 installer
microsoft-store = []
# Direct Distribution (default): non-sandboxed, global hotkeys enabled
default = []
